act super autos

--- a/index.html
+++ b/index.html
@@ -1,13 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo 1</title>
+    <title>SuperD</title>
+    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orelega+One&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/816541d4b8.js" crossorigin="anonymous"></script>
+    <style>
+
+    </style>
 </head>
+
 <body>
-    Primera Prueba git hub
-    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit vero odit vel doloremque optio, quaerat sit dignissimos laboriosam expedita perferendis laborum neque enim mollitia, possimus voluptates eum a consequatur illo!</h1>
+    <header>
+        <h1>Super Deportivos All</h1>
+        <NAV>
+            <span class="izq">
+                <a href="index.html"><i class="fa-solid fa-fire fa-xl"></i></a>
+            </span>
+            <span class="der">
+                <a class="navsup" href="index.html">Home</a>
+                <a class="navsup" href="contactos.html">contacto</a>
+                <a class="navsup" href="acercade.html">nosotros</a>
+                <a class="navsup" href="modelos.html">modelos</a>
+                <a class="navsup" href="registro.html">Registro</a>
+                <a class="navsup" href="sucursales.html">Sucursales</a>
+            </span>
+        </NAV>
+
+    </header>
+    <main>
+        <h2>Ferrari</h2>
+        <img align: "center" src="./imagenes/1.png" alt="auto" id="autico">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque repudiandae quos consequatur odit similique
+            rerum ipsum cupiditate neque ducimus! Sed aut tempora eos quas tenetur nihil nemo ipsa culpa eius.
+            Repellendus quo consectetur corrupti, inventore magnam hic saepe? Ipsa ipsum tempore quasi totam tempora
+            dicta saepe in blanditiis ut alias cupiditate, iste accusantium quas unde nostrum laudantium nam ex
+            perferendis.</p>
+        <a href="modelos.html">modelos</a>
+
+        </a> <br><br><br><br><br><br><br><br>
+        <br><br><br>
+    </main>
+    <footer>
+        <nav>
+            <a href="https://www.twitter.com"><i class="fa-brands fa-twitter fa-lg "></i></a>
+            <a href="https://www.whatsapp.com"><i class="fa-brands fa-autoprefixer fa-lg"></i></a>
+            <a href="https://www.facebook.com"><i class="fa-brands fa-facebook fa-lg"></i></a>
+        </nav>
+        <p>Derechos Reservados 2022</p>
+
+    </footer>
 </body>
+
 </html>
